# SynBioInventory

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  ROADMAP.md  docker-compose.yaml
docs/: API.md  ARCHITECHTURE.md  PRODUCT.md
server/: README.md  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/api/: routes_auth.py  routes_collections.py  routes_inventory.py
server/app/schemas/: __init__.py  auth.py  collections.py  inventory.py
server/app/services/: inventory_service.py  synbiohub_client.py
server/tests/: test_collections_service.py  test_inventory_create.py  test_inventory_service.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: main.tsx  styles.css
web/src/app/: router.tsx
web/src/components/: Breadcrumbs.tsx  CollectionList.tsx  CollectionRow.tsx  ImageUpload.tsx  ImageUploader.tsx  Layout.tsx  MobileScaffold.tsx  MobileShell.tsx
web/src/lib/: api.ts  types.ts
web/src/pages/: CollectionBrowserPage.tsx  CreateImplementationPage.tsx  LoginPage.tsx  ReviewSubmitPage.tsx  SuccessPage.tsx
